2010-11-01  Glenn Morris  <rgm@gnu.org>

	* sieve-manage.el: Require 'cl when compiling.

	* gnus-util.el (iswitchb-read-buffer): Declare rather than autoload.
	(gnus-iswitchb-completing-read): Require iswitchb.
	(gnus-select-frame-set-input-focus): Silence compiler.

2010-10-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-subject-trailing-was-query): Change default to t,
	since I think that's what most people want.

	* nnimap.el (nnimap-request-accept-article): Erase buffer before
	appending for easier debugging.
	(nnimap-wait-for-connection): Take a regexp.
	(nnimap-request-accept-article): Wait for the continuation line before
	sending anything unless we're streaming.

	* gnus-art.el (gnus-treat-article): Only inhibit body washing, and
	leave the header washing to take place.

2010-10-31  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* gnus-msg.el (gnus-configure-posting-styles): Permit the use of
	regular expression match and replace in posting styles.

2010-10-31  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (gnus-group-make-nnir-group,nnir-run-query): Allow searching
	an entire server.
	(nnir-get-active): New function.
	(nnir-run-imap): Use it.
	(nnir-run-gmane): Who knew, gmane search returns an article score!

	* gnus-srvr.el (gnus-server-mode-map): add binding "G" to search the
	server on the current line with nnir.

2010-10-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-cite.el (gnus-article-foldable-buffer): Refactor out.
	(gnus-article-foldable-buffer): Don't fold regions that have a ragged
	left edge.
	(gnus-article-foldable-buffer): Skip past the prefix when determining
	raggedness.

	* gnus-sum.el (gnus-summary-show-article): Add `C-u C-u g' for showing
	the raw article, and change `C-u g' to show the article without doing
	treatments.

	* gnus-art.el (gnus-mime-display-alternative): Actually pass the type
	on to `gnus-treat-article'.
	(gnus-inhibit-article-treatments): New variable.
